fixing small issue on button text wrap mobile

--- a/wp-content/themes/fondationmolson/static/helpers/css/sass/partials/_buttons.sass
+++ b/wp-content/themes/fondationmolson/static/helpers/css/sass/partials/_buttons.sass
@@ -4,6 +4,7 @@
   font-weight: $bold
   @media (max-width: $break-sm)
     min-width: 210px
+    white-space: normal
   @media (max-width: $break-xs)
     min-width: 75%
   + .btn
